# 2D_Game_Framework

./: .atom-dbg.cson  .gitignore  .gitmodules  Animation.cc  Animation.h  CMakeLists.txt  Camera.cc  Camera.h  DebugEnemy.cc  DebugEnemy.h  Engine.cc  Engine.h  EngineUtils.cc  EngineUtils.h  Event.cc  Event.h  ExampleTileset.tsx  ExtraTypes.cc  ExtraTypes.h  Game.cc  Game.h  GameUtils.h  Input.cc  Input.h  InputComponent.cc  InputComponent.h  License.txt  Makefile  Map.cc  Map.cc.old  Map.h  Map.h.old  Map.tmx  MediaLoader.cc  MediaLoader.h  Object.cc  Object.h  ObjectManager.cc  ObjectManager.h  Player.cc  (+14 more)
engine/include/: Game.h
engine/src/: Animation.cpp  Camera.cpp  Object.cpp  main.cpp
include/: Animation.h  ExtraTypes.h  Game.h  Player.h  RenderComponent.h  basicHeader.h  multiplatform_SDL2.h
libraries/Box2D/: Box2D.lib
src/: Animation.cpp  DebugEnemy.cpp  Engine.cpp  ExtraTypes.cpp  Game.cpp  Map.cpp  Player.cpp  main.cpp
